Bug 103909 - anv_allocator.c:113:1: error: static declaration of ‘memfd_create’ follows non-static declaration
Summary: anv_allocator.c:113:1: error: static declaration of ‘memfd_create’ follows no...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-26 08:27 UTC by Vinson Lee
Modified: 2017-12-06 08:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-11-26 08:27:07 UTC
mesa: 0bd83d04612520ff97e21d41bcc3ad2e68e160df (master 17.4.0-devel)

  CC       vulkan/vulkan_libvulkan_common_la-anv_allocator.lo
vulkan/anv_allocator.c:113:1: error: static declaration of ‘memfd_create’ follows non-static declaration
 memfd_create(const char *name, unsigned int flags)
 ^~~~~~~~~~~~
In file included from /usr/include/bits/mman.h:45:0,
                 from /usr/include/sys/mman.h:41,
                 from vulkan/anv_allocator.c:29:
/usr/include/bits/mman-linux.h:125:5: note: previous declaration of ‘memfd_create’ was here
 int memfd_create (const char *__name, unsigned int __flags) __THROW;
     ^~~~~~~~~~~~
Comment 1 Vinson Lee 2017-12-06 08:35:20 UTC
commit 8c1e4b1afc8d396ccf99c725c59b29a9aa305557
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Tue Nov 28 23:16:58 2017 -0800

    anv: Check if memfd_create is already defined.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=103909
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>
    Reviewed-by: Eric Engestrom <eric.engestrom@imgtec.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.